--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,49 +38,6 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/drawercontent_main"
-        android:layout_width="320dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="end"
-        android:paddingTop="@dimen/statusbar_height"
-        android:background="@color/primary_dark"
-        android:fitsSystemWindows="true">
-
-        <ImageView
-            android:id="@+id/imageview_main_song"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|top"
-            android:orientation="vertical"
-            android:background="@drawable/text_backdrop"
-            android:padding="24dp"
-            android:paddingBottom="40dp">
-
-            <TextView
-                android:id="@+id/textview_main_song_title"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:textSize="@dimen/abc_text_size_title_material"
-                android:textColor="@color/primary_text_light"
-                android:text="hi"/>
-
-            <TextView
-                android:id="@+id/textview_main_song_artist"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:textColor="@color/secondary_text_light"
-                android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
-                android:text="hi"/>
-        </LinearLayout>
-
-    </RelativeLayout>
+    <include layout="@layout/drawer_main"/>
 
 </android.support.v4.widget.DrawerLayout>
