--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <dimen name="controls_padding">8dp</dimen>
     <dimen name="statusbar_height">25dp</dimen>
     <dimen name="statusbar_negative_height">-25dp</dimen>
+
+    <dimen name="pause_bar_width">48dp</dimen>
+    <dimen name="pause_bar_distance">40dp</dimen>
+    <dimen name="pause_bar_height">144dp</dimen>
 </resources>
