Create initial subreddits drawer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,4 +40,6 @@
 
     <include layout="@layout/drawer_main"/>
 
+    <include layout="@layout/drawer_subreddits"/>
+
 </android.support.v4.widget.DrawerLayout>
