--- a/app/src/main/res/layout/drawer_subreddits.xml
+++ b/app/src/main/res/layout/drawer_subreddits.xml
@@ -1,32 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.design.widget.NavigationView
     android:id="@+id/navigation_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="320dp"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:background="@color/primary_dark"
-    android:fitsSystemWindows="true">
-
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <include layout="@layout/navigationview_header"/>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerview_subreddits"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fillViewport="true"/>
-
-        </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
-
-</RelativeLayout>
+    app:headerLayout="@layout/navigationview_header"
+    app:menu="@menu/menu_subreddits"/>
