--- a/app/src/main/res/menu/menu_subreddits.xml
+++ b/app/src/main/res/menu/menu_subreddits.xml
@@ -7,5 +7,11 @@
             android:checked="true"
             android:icon="@drawable/fire_emoji"
             android:title="@string/trap"/>
+
+        <item
+            android:id="@+id/drawer_chillmusic"
+            android:checked="false"
+            android:icon="@drawable/droplet_emoji"
+            android:title="@string/chillmusic"/>
     </group>
 </menu>
