--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="divider">#B6B6B6</color>
 
     <color name="backgroundColor">#ff303030</color>
+    <color name="white">#FFFFFF</color>
 </resources>
