--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,6 @@
     <dimen name="pause_bar_width">48dp</dimen>
     <dimen name="pause_bar_distance">40dp</dimen>
     <dimen name="pause_bar_height">144dp</dimen>
+    <dimen name="playpausewidth">56dp</dimen>
+    <dimen name="playpauseheight">56dp</dimen>
 </resources>
