--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,18 @@
-<android.support.v4.widget.DrawerLayout
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawerlayout_main"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/relativelayout_main_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/relativelayout_main_content">
+        android:layout_height="match_parent">
 
         <View
             android:id="@+id/status_bar_offset"
             android:layout_width="match_parent"
             android:layout_height="@dimen/statusbar_height"
-            android:background="@color/primary_dark"/>
+            android:background="@color/primary_dark" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,7 +24,7 @@
                 android:id="@+id/toolbar"
                 style="@style/ToolbarTheme"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"/>
+                android:layout_height="?attr/actionBarSize" />
 
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/swiperefresh_main"
@@ -38,7 +37,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:clipToPadding="false"
-                    android:fitsSystemWindows="true"/>
+                    android:fitsSystemWindows="true" />
 
             </android.support.v4.widget.SwipeRefreshLayout>
 
@@ -47,8 +46,8 @@
 
     </RelativeLayout>
 
-    <include layout="@layout/drawer_main"/>
+    <include layout="@layout/drawer_main" />
 
-    <include layout="@layout/drawer_subreddits"/>
+    <include layout="@layout/drawer_subreddits" />
 
 </android.support.v4.widget.DrawerLayout>
