--- a/app/src/main/res/layout/drawer_main.xml
+++ b/app/src/main/res/layout/drawer_main.xml
@@ -52,7 +52,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/navbar_height">
+        android:layout_marginBottom="@dimen/navbar_height"
+        android:layout_marginTop="20dp">
 
       <ImageView
           android:id="@+id/drawer_rewind"
