--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -78,6 +78,7 @@
     <item name="android:statusBarColor">@color/primary_dark</item>
     <item name="android:windowTranslucentStatus">true</item>
     <item name="android:windowTranslucentNavigation">true</item>
+    <item name="colorAccent">@color/primary_dark</item>
   </style>
 
   <style name="ToolbarTheme" parent="ToolbarTheme.Base">
